--- a/debian/README
+++ b/debian/README
@@ -1,6 +1,7 @@
 The Debian Package cmake4epics
-----------------------------
+------------------------------
 
-Comments regarding the Package
+Please refer to the examples in the basic, caApp, and iocApp folders
+in /usr/share/doc/cmake4epics/.
 
  -- Konrad Martin <konrad@frib.msu.edu>  Thu, 30 Nov 2017 11:24:36 -0500
