--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cmake4epics (1.0-2) unstable; urgency=low
+
+  * Bump up standards version
+
+ -- Martin Konrad <konrad@frib.msu.edu>  Mon, 15 Jul 2019 17:21:59 -0400
+
 cmake4epics (1.0-1) unstable; urgency=low
 
   * Initial Release.
